--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
   ],
   "scripts": {
     "dev": "npm run dev:input",
-    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:sass sass:render bundler types",
+    "build": "npm-run-all build:form build:input build:dropdown build:checkbox build:menu build:sass sass:render bundler types",
     "build:test": "npm-run-all test linters",
     "build:release": "npm-run-all build build:test build:api build:docs bundler postinstall",
     "build:ci": "npm-run-all sweep build:release",
@@ -158,27 +158,33 @@
     "build:api:input": "wca analyze \"./components/input/src/*.js\" --outFiles docs/api.md",
     "build:api:checkbox": "wca analyze \"./components/checkbox/src/*.js\" --outFiles docs/api.md",
     "build:api:dropdown": "wca analyze \"./components/dropdown/src/*.js\" --outFiles docs/api.md",
+    "build:api:menu": "wca analyze \"./components/menu/src/*.js\" --outFiles docs/api.md",
     "build:form": "npm-run-all build:version:form build:sass:form sass:render:form types",
     "build:input": "npm-run-all build:version:input build:sass:input sass:render:input types",
     "build:checkbox": "npm-run-all build:sass:checkbox sass:render:checkbox types",
     "build:dropdown": "npm-run-all build:version:dropdown build:sass:dropdown sass:render:dropdown types",
+    "build:menu": "npm-run-all build:sass:menu sass:render:menu types",
     "dev:form": "concurrently --kill-others \"npm run build:watch:form\" \"npm run serve:form\"",
     "dev:input": "concurrently --kill-others \"npm run build:watch:input\" \"npm run serve:input\"",
     "dev:checkbox": "concurrently --kill-others \"npm run build:watch:checkbox\" \"npm run serve:checkbox\"",
     "dev:dropdown": "concurrently --kill-others \"npm run build:watch:dropdown\" \"npm run serve:dropdown\"",
+    "dev:menu": "concurrently --kill-others \"npm run build:watch:menu\" \"npm run serve:menu\"",
     "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input demo:update:index",
     "build:demo:form": "npm-run-all build:form demo:rm:build demo:new:build demo:copy:index:form demo:copy:demo:form demo:update:index",
     "build:demo:input": "npm-run-all build:input demo:rm:build demo:new:build demo:copy:index:input demo:copy:demo:input demo:update:index",
     "build:demo:checkbox": "npm-run-all build:checkbox demo:rm:build demo:new:build demo:copy:index:checkbox demo:copy:demo:checkbox demo:update:index",
     "build:demo:dropdown": "npm-run-all build:dropdown demo:rm:build demo:new:build demo:copy:index:dropdown demo:copy:demo:dropdown demo:update:index",
+    "build:demo:menu": "npm-run-all build:menu demo:rm:build demo:new:build demo:copy:index:menu demo:copy:demo:menu demo:update:index",
     "demo:copy:demo:form": "copyfiles -u 1 -V \"./components/form/src/demo/**/*\" ./build/demo",
     "demo:copy:demo:input": "copyfiles -u 1 -V \"./components/input/src/demo/**/*\" ./build/demo",
     "demo:copy:demo:checkbox": "copyfiles -u 1 -V \"./components/checkbox/src/demo/**/*\" ./build/demo",
     "demo:copy:demo:dropdown": "copyfiles -u 1 -V \"./components/dropdown/src/demo/**/*\" ./build/demo",
+    "demo:copy:demo:menu": "copyfiles -u 1 -V \"./components/menu/src/demo/**/*\" ./build/demo",
     "demo:copy:index:form": "copyfiles -u 1 -V \"./components/form/src/demo/index.html\" ./build",
     "demo:copy:index:input": "copyfiles -u 1 -V \"./components/input/src/demo/index.html\" ./build",
     "demo:copy:index:checkbox": "copyfiles -u 1 -V \"./components/checkbox/src/demo/index.html\" ./build",
     "demo:copy:index:dropdown": "copyfiles -u 1 -V \"./components/dropdown/src/demo/index.html\" ./build",
+    "demo:copy:index:menu": "copyfiles -u 1 -V \"./components/menu/src/demo/index.html\" ./build",
     "demo:new:build": "mkdir -p ./build/css ./build/demo",
     "demo:rm:build": "rm -rf ./build",
     "build:dev:assets": "npm-run-all build:sass:input build:sass:dropdown postCss:input postCss:dropdown sass:render",
@@ -186,16 +192,19 @@
     "build:dev:assets:input": "npm-run-all build:sass:input postCss:input sass:render:input",
     "build:dev:assets:checkbox": "npm-run-all build:sass:checkbox postCss:checkbox sass:render:checkbox",
     "build:dev:assets:dropdown": "npm-run-all build:sass:dropdown postCss:dropdown sass:render:dropdown",
+    "build:dev:assets:menu": "npm-run-all build:sass:menu postCss:menu sass:render:menu",
     "build:docs": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:docs:form": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:docs:input": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:docs:checkbox": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:docs:dropdown": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
+    "build:docs:menu": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:sass": "npm-run-all build:sass:input build:sass:dropdown postCss:input postCss:dropdown sass:render",
     "build:sass:form": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/form/src:./components/form/src\"",
     "build:sass:input": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/input/src:./components/input/src\"",
     "build:sass:checkbox": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/checkbox/src:./components/checkbox/src\"",
     "build:sass:dropdown": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/dropdown/src:./components/dropdown/src\"",
+    "build:sass:menu": "sass --no-source-map --load-path=node_modules --load-path=. \"./components/menu/src:./components/menu/src\"",
     "build:version:form": "cross-env npm_config_component=form node ./components/form/src/scripts/version.mjs",
     "build:version:input": "cross-env npm_config_component=input node ./components/input/src/scripts/version.mjs",
     "build:version:dropdown": "cross-env npm_config_component=dropdown node ./components/dropdown/src/scripts/version.mjs",
@@ -203,32 +212,39 @@
     "build:watch:input": "nodemon -e scss,js --watch \"./components/input/src\" --ignore \"*.css\" --ignore \"*-css.js\" --ignore \"*.version.js\" --ignore \"*Version.js\" --exec \"npm run build:input\"",
     "build:watch:checkbox": "nodemon -e scss,js --watch \"./components/checkbox/src\" --ignore \"*.css\" --ignore \"*-css.js\" --ignore \"*.version.js\" --ignore \"*Version.js\" --exec \"npm run build:checkbox\"",
     "build:watch:dropdown": "nodemon -e scss,js --watch \"./components/dropdown/src\" --ignore \"*.css\" --ignore \"*-css.js\" --ignore \"*.version.js\" --ignore \"*Version.js\" --exec \"npm run build:dropdown\"",
+    "build:watch:menu": "nodemon -e scss,js --watch \"./components/dropdown/src\" --ignore \"*.css\" --ignore \"*-css.js\" --ignore \"*.version.js\" --ignore \"*Version.js\" --exec \"npm run build:menu\"",
     "dist:js": "copyfiles -u 1 -V './components/**/*.js' ./dist",
     "dist:js:form": "copyfiles -u 1 -V \"./components/form/src/**/*.js\" ./dist",
     "dist:js:input": "copyfiles -u 1 -V \"./components/input/src/**/*.js\" ./dist",
     "dist:js:checkbox": "copyfiles -u 1 -V \"./components/checkbox/src/**/*.js\" ./dist",
     "dist:js:dropdown": "copyfiles -u 1 -V \"./components/dropdown/src/**/*.js\" ./dist",
+    "dist:js:menu": "copyfiles -u 1 -V \"./components/menu/src/**/*.js\" ./dist",
     "postCss:form": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "postCss:input": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "postCss:dropdown": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
+    "postCss:menu": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
     "sass:render": "sass-render --load-path=node_modules \"components/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "sass:render:form": "sass-render --load-path=node_modules \"./components/form/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "sass:render:input": "sass-render --load-path=node_modules \"./components/input/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "sass:render:checkbox": "sass-render --load-path=node_modules \"./components/checkbox/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "sass:render:dropdown": "sass-render --load-path=node_modules \"./components/dropdown/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "sass:render:menu": "sass-render --load-path=node_modules \"./components/menu/src/**/*.css\" -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
     "serve:form": "web-dev-server --open components/form/demo/ --node-resolve --watch --app-index \"./components/form/demo/index.html\"",
     "serve:input": "web-dev-server --open components/input/demo/ --node-resolve --watch --app-index \"./components/input/demo/index.html\"",
     "serve:checkbox": "web-dev-server --open components/checkbox/demo/ --node-resolve --watch --app-index \"./components/checkbox/demo/index.html\"",
     "serve:dropdown": "web-dev-server --open components/dropdown/demo/ --node-resolve --watch --app-index \"./components/dropdown/demo/index.html\"",
+    "serve:menu": "web-dev-server --open components/menu/demo/ --node-resolve --watch --app-index \"./components/menu/demo/index.html\"",
     "build:form:full": "npm-run-all build:form build:api:form build:docs:form build:dev:assets:form",
     "build:input:full": "npm-run-all build:input build:api:input build:docs:input build:dev:assets:input",
     "build:checkbox:full": "npm-run-all build:checkbox build:api:checkbox build:docs:checkbox build:dev:assets:checkbox",
     "build:dropdown:full": "npm-run-all build:dropdown build:api:dropdown build:docs:dropdown build:dev:assets:dropdown",
+    "build:menu:full": "npm-run-all build:menu build:api:menu build:docs:menu build:dev:assets:menu",
     "build:form:release": "npm-run-all build:form:full build:test build:demo:form",
     "build:input:release": "npm-run-all build:input:full build:test build:demo:input",
     "build:checkbox:release": "npm-run-all build:checkbox:full build:test build:demo:checkbox",
     "build:dropdown:release": "npm-run-all build:dropdown:full build:test build:demo:dropdown",
+    "build:menu:release": "npm-run-all build:menu:full build:test build:demo:menu",
     "sweep": "rm -rf dist && find ./demo ./src ./components -not -path \"*/node_modules/*\" -type f \\( -name \"*.css\" -o -name \"*-css.js\" \\) -delete",
     "test": "wtr --coverage",
     "test:watch": "wtr --watch",
@@ -239,6 +255,8 @@
     "test:checkbox": "wtr \"./components/checkbox/test/**/*.test.js\" --coverage",
     "test:dropdown": "wtr \"./components/dropdown/test/**/*.test.js\" --coverage",
     "test:dropdown:watch": "wtr \"./components/dropdown/test/**/*.test.js\" --watch",
+    "test:menu": "wtr \"./components/menu/test/**/*.test.js\" --coverage",
+
     "linters": "npm-run-all scssLint esLint",
     "scssLint": "stylelint \"./components/**/*.scss\"",
     "esLint": "eslint 'components/**/*.js'",
@@ -249,6 +267,10 @@
     "linters:checkbox": "npm-run-all scssLint:checkbox esLint:checkbox",
     "scssLint:checkbox": "stylelint \"./components/checkbox/**/*.scss\"",
     "esLint:checkbox": "eslint 'components/checkbox/**/*.js'",
+
+    "linters:menu": "npm-run-all scssLint:menu esLint:menu",
+    "scssLint:menu": "stylelint \"./components/menu/**/*.scss\"",
+    "esLint:menu": "eslint 'components/menu/**/*.js'",
 
     "bundler": "rollup -c",
     "bundler:test": "rollup -c -w",
