--- a/components/input/package.json
+++ b/components/input/package.json
@@ -7,7 +7,7 @@
     "================================================================================"
   ],
   "name": "@aurodesignsystem/auro-input",
-  "version": "4.1.1",
+  "version": "4.1.3",
   "description": "auro-input HTML custom element",
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
     "node": "^18 || ^20"
   },
   "dependencies": {
-    "@aurodesignsystem/auro-button": "^8.1.2",
+    "@aurodesignsystem/auro-button": "^8.1.3",
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
     "@aurodesignsystem/auro-icon": "^6.0.2",
     "@aurodesignsystem/auro-library": "~2.8",
@@ -36,7 +36,7 @@
   "devDependencies": {
     "@alaskaairux/icons": "^4.44.1",
     "@aurodesignsystem/design-tokens": "^4.10.1",
-    "@aurodesignsystem/eslint-config": "^1.3.2",
+    "@aurodesignsystem/eslint-config": "^1.3.3",
     "@aurodesignsystem/webcorestylesheets": "^5.1.2",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
@@ -52,22 +52,22 @@
     "backstopjs": "^6.3.25",
     "compression": "^1.7.4",
     "concat": "^1.0.3",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "copyfiles": "^2.4.1",
     "core-js": "^3.39.0",
-    "eslint": "^9.13.0",
+    "eslint": "^9.14.0",
     "eslint-plugin-jsdoc": "^50.4.3",
     "husky": "^9.1.6",
     "lodash": "^4.17.21",
-    "markdown-magic": "^2.6.1",
+    "markdown-magic": "^3.3.0",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
-    "postcss-custom-properties": "^14.0.3",
+    "postcss-custom-properties": "^14.0.4",
     "postcss-discard-comments": "^7.0.3",
-    "rollup": "^4.24.3",
+    "rollup": "^4.24.4",
     "rollup-plugin-serve": "^2.0.3",
-    "sass": "^1.80.5",
+    "sass": "^1.80.6",
     "semantic-release": "^24.2.0",
     "sinon": "^19.0.2",
     "stylelint": "^16.10.0",
@@ -147,6 +147,21 @@
     "web components"
   ],
   "scripts": {
+    "build": "npm-run-all build:version build:sass sass:render bundler types",
+    "build:test": "npm-run-all test linters",
+    "build:release": "npm-run-all build build:test build:api build:docs bundler postinstall",
+    "build:ci": "npm-run-all sweep build:release",
+    "build:api": "wca analyze 'src/auro-input.js' --outFiles docs/api.md",
+    "build:demo": "npm-run-all build demo:rm:build demo:new:build demo:copy:index demo:copy:demo demo:update:index",
+    "build:dev:assets": "npm-run-all build:sass:component postCss:component sass:render",
+    "build:docs": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
+    "build:sass": "npm-run-all build:sass:component postCss:component sass:render",
+    "build:sass:component": "sass --no-source-map src:src",
+    "build:version": "node scripts/version.mjs",
+    "build:watch": "nodemon -e scss,js --watch src --exec npm run build:dev:assets",
+    "bundler": "rollup -c",
+    "bundler:test": "rollup -c -w",
+    "scssLint": "stylelint \"./src/**/*.scss\"",
     "demo:copy:demo": "copyfiles -u 1 -V './demo/index.md' ./build/demo",
     "demo:copy:index": "copyfiles -u 1 -V './demo/index.html' ./build",
     "demo:new:build": "mkdir ./build && mkdir ./build/css && mkdir ./build/demo",
@@ -154,10 +169,22 @@
     "demo:update:index": "node ./scripts/prepForBuild",
     "dev": "concurrently --kill-others 'npm run build:watch' 'npm run serve'",
     "dist:js": "copyfiles -u 1 -V './src/**/*.js' ./dist",
+    "esLint": "./node_modules/.bin/eslint src/**/*.js --ignore-pattern 'src/**/*Version.js'",
+    "linters": "npm-run-all scssLint esLint",
+    "preCommit": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/pre-commit.mjs",
     "postCss:component": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postCss.mjs",
-    "postinstall": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/postinstall.mjs",
-    "sass:render": "sass-render --load-path=node_modules 'src/**/*.css' 'components/**/*.css' -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
+    "postinstall": "node packageScripts/postinstall.mjs",
+    "sass:render": "sass-render 'src/**/*.css' 'components/**/*.css' -t ./node_modules/@aurodesignsystem/auro-library/scripts/build/staticStyles-template.js",
     "serve": "web-dev-server --open demo/ --node-resolve --watch",
-    "types": "tsc"
+    "sweep": "rm -rf ./dist | find ./demo ./dist ./src -type f \\( -name \"*.css\" -o -name \"*-css.js\" \\) -delete",
+    "test": "wtr --coverage",
+    "test:watch": "wtr --watch",
+    "prepare": "husky install",
+    "vrt:approve": "backstop approve",
+    "vrt:ref": "backstop reference",
+    "vrt:report": "backstop openReport",
+    "vrt:test": "backstop test",
+    "types": "tsc",
+    "postversion": "npm-run-all build:api build:docs"
   }
 }
