--- a/components/input/package.json
+++ b/components/input/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@aurodesignsystem/auro-button": "^8.1.3",
     "@aurodesignsystem/auro-formvalidation": "^1.0.4",
-    "@aurodesignsystem/auro-icon": "^6.0.2",
+    "@aurodesignsystem/auro-icon": "^6.0.3",
     "@aurodesignsystem/auro-library": "~2.8",
     "chalk": "^5.3.0",
     "cleave.js": "^1.6.0",
@@ -157,7 +157,7 @@
     "build:docs": "node ./node_modules/@aurodesignsystem/auro-library/scripts/build/generateDocs.mjs",
     "build:sass": "npm-run-all build:sass:component postCss:component sass:render",
     "build:sass:component": "sass --no-source-map src:src",
-    "build:version": "node scripts/version.mjs",
+    "build:version": "node ./src/scripts/version.mjs",
     "build:watch": "nodemon -e scss,js --watch src --exec npm run build:dev:assets",
     "bundler": "rollup -c",
     "bundler:test": "rollup -c -w",
